add var color&fonts; add favicon&logo; add components; finish Header

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,35 @@
 @import "@fontsource-variable/inter";
 @import "@fontsource-variable/manrope";
 
+:root {
+  --font-family: "Manrope", sans-serif;
+  --second-family: "Inter", sans-serif;
+  --main: #101828;
+  --gray: #8d929a;
+  --gray-light: #dadde1;
+  --badges: #f2f4f7;
+  --inputs: #f7f7f7;
+  --white: #fff;
+  --button: #3470ff;
+  --button-hover: #0b44cd;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  color: var(--button-hover);
+}
+.container {
+  padding: 0 120px;
+}
+
 
