--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,8 +1,10 @@
 .banner {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+  background-color: var(--gray-light);
+  background-repeat: no-repeat;
 }
 .bannerImg {
   width: 100%;
@@ -12,22 +14,34 @@
   object-position: center;
 }
 .textBannerContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--white);
-    text-align: center;
+  position: absolute;
+  top: 73%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--white);
+  text-align: center;
+  width: 783px;
 }
-.textBannerContainer >* {
-    color: var(--white);
+.textBannerContainer > * {
+  color: var(--white);
+  font-family: var(--font-manrope), sans-serif;
+  letter-spacing: 0;
 }
-.secondTitle {
+.firstBannerTitle {
+  font-size: 60px;
+  padding-bottom: 16px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+.secondBannerTitle {
+  padding-bottom: 40px;
+  font-weight: 600;
+  font-size:24px;
+  line-height: 1.3;
+}
 
-}
 .btnBanner {
-    padding:  12px 99px;
-    background-color: var(--button);
-    border: none;
-    border-radius: 12px;
+  padding: 12px 99px;
+  font-weight: 600;
+  line-height: 1.4;
 }
