--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @import "@fontsource-variable/manrope";
 
 :root {
-  --font-family: "Manrope", sans-serif;
-  --second-family: "Inter", sans-serif;
+  --font-manrope: "Manrope", sans-serif;
+  --font-inter: "Inter", sans-serif;
   --main: #101828;
   --gray: #8d929a;
   --gray-light: #dadde1;
@@ -13,11 +13,22 @@
   --button: #3470ff;
   --button-hover: #0b44cd;
 }
-html, body {
+html,
+body {
   height: 100%;
   overflow-y: hidden;
 }
-
+button {
+  background-color: var(--button);
+  border: none;
+  border-radius: 12px;
+  color: var(--white);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+button:hover {
+  cursor: pointer;
+  background-color: var(--button-hover);
+}
 *,
 *::before,
 *::after {
@@ -35,5 +46,3 @@ a:hover {
 .container {
   padding: 0 120px;
 }
-
-
