--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--badges);
+}
+
+.container {
+  padding: 0 120px;
+  background-color: var(--badges);
 }
 .menu {
   display: flex;
