--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -1,3 +1,8 @@
+.containerCatalog {
+    padding: 0 120px;
+    min-height: 192vh;
+}
+
 .carsContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 в ряд */
@@ -5,6 +10,7 @@
     row-gap: 48px;
     font-family: var(--font-manrope), sans-serif;
     letter-spacing: 0;
+    margin-bottom: 80px;
 }
 .carItem {
 }
@@ -35,5 +41,20 @@
     padding: 12px 80px;
     font-weight: 600;
     line-height: 1.4;
-
+}
+.containerLoadMore {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.loadMore {
+    background-color: var(--white);
+    color: var(--main);
+    border: 1px solid var(--button);
+    padding: 12px 51px;
+    margin-bottom: 80px;
+}
+.loadMore:hover {
+    background-color: var(--white);
+    border: 1px solid var(--button-hover);
 }
