--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -1,60 +1,79 @@
 .containerCatalog {
-    padding: 0 120px;
-    min-height: 192vh;
+  padding: 0 120px;
+  min-height: 192vh;
 }
 
 .carsContainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 в ряд */
-    column-gap  :32px;
-    row-gap: 48px;
-    font-family: var(--font-manrope), sans-serif;
-    letter-spacing: 0;
-    margin-bottom: 80px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 в ряд */
+  column-gap: 32px;
+  row-gap: 48px;
+  font-family: var(--font-manrope), sans-serif;
+  letter-spacing: 0;
+  margin-bottom: 80px;
 }
 .carItem {
+  position: relative;
 }
 .img {
-    width: 276px;
-    height: 268px;
-    object-fit: cover;
-    border-radius: 14px;
-    margin-bottom: 16px;;
+  width: 276px;
+  height: 268px;
+  object-fit: cover;
+  border-radius: 14px;
+  margin-bottom: 16px;
 }
 .model {
-    color: var(--button);
+  color: var(--button);
 }
 .textContainerForCar {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 8px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
 }
 .descriptionsUnderBrand {
-    color: var(--gray);
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.3;
-    margin-bottom: 28px;
+  color: var(--gray);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.3;
+  margin-bottom: 28px;
 }
 .btnBanner {
-    width: 100%;
-    padding: 12px 80px;
-    font-weight: 600;
-    line-height: 1.4;
+  width: 100%;
+  padding: 12px 80px;
+  font-weight: 600;
+  line-height: 1.4;
 }
 .containerLoadMore {
-    display: flex;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 .loadMore {
-    background-color: var(--white);
-    color: var(--main);
-    border: 1px solid var(--button);
-    padding: 12px 51px;
-    margin-bottom: 80px;
+  background-color: var(--white);
+  color: var(--main);
+  border: 1px solid var(--button);
+  padding: 12px 51px;
+  margin-bottom: 80px;
 }
 .loadMore:hover {
-    background-color: var(--white);
-    border: 1px solid var(--button-hover);
+  background-color: var(--white);
+  border: 1px solid var(--button-hover);
+}
+.btnHeart {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+
+.heart {
+  filter: drop-shadow(0 0 3px black);
+}
+.heart:hover {
+  cursor: pointer;
+}
+.outlined {
+  color: white; /* обводка белая */
+}
+.filled {
+  color: blue; /* закрашенное синее */
 }
