fix favorite checked color

--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -75,5 +75,5 @@
   color: white; /* обводка белая */
 }
 .filled {
-  color: blue; /* закрашенное синее */
+  color: var(--button); /* закрашенное синее */
 }
