--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     column-gap: 72px;
+    min-height: 130vh;
 }
 .oneCarImg {
     width: 640px;
@@ -27,11 +28,11 @@
     flex-direction: column;
     gap: 110px;
 }
-.rentalConditionsParagraph {
+.conditionsThirdTitle {
     margin-bottom: 20px;
 }
 .checkCircle {
-    margin-right: 6px;
+    margin-right: 8px;
 }
 .oneCondition {
     display: flex;
@@ -43,3 +44,7 @@
     gap: 16px;
 }
 
+.rentalConditionContainer *{
+    display: flex;
+    align-items: center;
+}
