--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
-@import "@fontsource-variable/inter";
 @import "@fontsource-variable/manrope";
 
 :root {
   --font-manrope: "Manrope", sans-serif;
-  --font-inter: "Inter", sans-serif;
   --main: #101828;
   --gray: #8d929a;
   --gray-light: #dadde1;
@@ -16,6 +14,8 @@
 html,
 body {
   height: 100%;
+  font-family: var(--font-manrope), sans-serif;
+  color: var(--main);
 }
 button {
   background-color: var(--button);
