--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --badges: #f2f4f7;
   --inputs: #f7f7f7;
   --white: #fff;
-  --button: #3470ff;
+  --button: #1254f3;
   --button-hover: #0b44cd;
 }
 html,
