--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -76,3 +76,27 @@
 .filled {
   color: var(--button); /* закрашенное синее */
 }
+.noAvailable {
+  text-align: center;
+  padding-bottom: 4rem;
+  font-size: 1.5rem;
+}
+.scrollButton {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  background-color: #0199fc;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(1, 153, 252, 0.5);
+  transition: transform 0.3s;
+}
+
+.scrollButton:hover {
+  transform: scale(1.1);
+}
