smaller font-weight for - Not available cars

--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -79,7 +79,8 @@
 .noAvailable {
   text-align: center;
   padding-bottom: 4rem;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
+  font-weight: 400;
 }
 .scrollButton {
   position: fixed;
