--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -5,6 +5,8 @@
   justify-content: center;
   padding: 20px;
   border-radius: 8px;
+  margin-top: 64px;
+  margin-bottom: 36px;
 }
 .carBrandLabel {
   display: block;
@@ -13,7 +15,6 @@
   line-height: 1.3;
   color: var(--gray);
   margin-bottom: 8px;
-
 }
 .selectFilters {
   width: 204px;
@@ -28,36 +29,35 @@
   padding: 12px 16px;
 }
 .fromToContainer {
-    width: 320px;
-    height: 44px;
-
+  width: 320px;
+  height: 44px;
 }
 .inputFromTo {
-    border: none;
-    padding: 12px 0 12px 24px ;
-    width: 160px;
-    background-color: var(--inputs);
-
+  border: none;
+  padding: 12px 0 12px 24px;
+  width: 160px;
+  background-color: var(--inputs);
 }
 .inputFromTo:first-child {
-    border-right: 1px solid #ccc; /* разделитель между полями */
+  border-right: 1px solid #ccc; /* разделитель между полями */
 }
 .inputFromTo:first-child {
-    border-radius: 8px 0 0 8px;
-    border-right: 1px solid #ccc;
+  border-radius: 8px 0 0 8px;
+  border-right: 1px solid #ccc;
 }
 .inputFromTo:last-child {
-    border-radius: 0 8px 8px 0;
+  border-radius: 0 8px 8px 0;
 }
 .btnSearch {
-    padding: 12px 51px;
+  padding: 12px 51px;
 }
 .btnReset {
-    background: transparent;
-    color: var(--button);
-    border: 2px solid var(--button);
-    border-radius: 12px;
-    font-size: 14px;
-    font-weight: 600;
-    padding: 12px 51px;
+  background: transparent;
+  color: var(--button);
+  border: 2px solid var(--button);
+  border-radius: 12px;
+  padding: 12px 51px;
+}
+.btnReset:hover {
+  color: var(--white);
 }
